# okolica

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/specs/001-mesh-chat-mvp/: plan.md  spec.md  tasks.md
