[project]
name = "okolica"
version = "0.1.0"
description = "LAN mesh messenger — peer-to-peer terminal chat over UDP/mDNS."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "textual>=0.80",
    "zeroconf>=0.132",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "black>=24",
    "isort>=5",
    "pylint>=3",
    "mypy>=1.13",
    "pre-commit>=4",
]

[project.scripts]
okolica = "okolica.cli:main_sync"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v", "-ra", "--tb=short",
    "--cov=src/okolica", "--cov-branch",
    "--cov-fail-under=70", "--cov-report=term-missing",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pylint.main]
py-version = "3.11"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
